[package]
name = "block-sleep"
authors = ["Lucas Culverhouse <lucasculverhouse@gmail.com>"]
version = "0.2.0"
edition = "2021"
rust-version = "1.79"
homepage = "https://github.com/lsculv/block-sleep"
repository = "https://github.com/lsculv/block-sleep"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
description = "Block your system from sleeping for an amount of time, or until a certain process exits"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
libc = "0.2.155"
sysinfo = "0.30.12"
zbus = "4.4.0"

[profile.release]
opt-level = "s"
strip = true
lto = true
